Sat Aug 11 02:59:10 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos3d/SmoothNodes3D.java: This class had
	been broken by changes in QSortedTree interface.
	* src/org/jcae/mesh/amibe/ds/AbstractHalfEdge.java: New area() and
	checkNewRingNormals() abstract methods.
	* src/org/jcae/mesh/amibe/ds/VirtualHalfEdge.java: Rename
	computeArea() into area().

Fri Aug  3 09:14:58 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/bora/xmldata/BModelReader.java
	  src/org/jcae/mesh/bora/xmldata/BModelWriter.java
	  src/org/jcae/mesh/xmldata/jcaebora.dtd: Extend jcaebora.dtd to store
	  constraints used to build current mesh.

Wed Aug  1 17:21:57 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/bora/ds/Hypothesis.java (checkCompatibility):
	Stricter check, FE type must match its argument.
	* src/org/jcae/mesh/bora/ds/Hypothesis.java (combine): This method now
	returns a boolean telling if constraints have been successfully
	combined.
	* src/org/jcae/mesh/xmldata/MeshExporter.java: Do not abort if the <normals>
	node is not present in jcae3d.
	* src/org/jcae/mesh/bora/ds/BModel.java: Modify getOutputDir() signature.

Thu Jul 26 02:19:57 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/NotOrientedEdge.java: Remove obsolete
	class.
	* src/org/jcae/mesh/amibe/patch/OTriangle2D.java
	  src/org/jcae/mesh/amibe/patch/VirtualHalfEdge2D.java: Rename OTriangle2D
	into VirtualHalfEdge2D for consistency reason.

Mon Jul 23 20:08:36 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/cad/CADShapeBuilder.java: Add types to
	newCurve2D() and newCurve3D() arguments.

Fri Jul 20 16:01:31 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/mesher/ds/MMesh1D.java: New boundaryNodes() method.
	* src/org/jcae/mesh/amibe/algos2d/Initial.java
	  src/org/jcae/mesh/amibe/algos2d/BasicMesh.java: Modify Initial()